--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "music-theory-helper-tool",
   "version": "1.0.0",
-  "description": "A simple web-based calculator for music scales and chords",
+  "description": "A practical music theory calculator for scales and chords",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tone": "^14.7.77"
   },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0"
-  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +31,7 @@
       "last 1 safari version"
     ]
   },
-  "license": "MIT"
+  "devDependencies": {
+    "react-scripts": "5.0.1"
+  }
 }
